--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
     <input
       class="new-todo"
       [placeholder]="inputHint"
+      [attr.data-myhint]="inputHint"
+      (keyup.enter)="addTodo($event)"
       autofocus>
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
