--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,27 +10,19 @@
       autofocus>
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
-  <section class="main">
+  <section class="main" *ngIf="todos.length > 0">
     <input class="toggle-all" type="checkbox">
     <label for="toggle-all">Mark all as complete</label>
-    <ul class="todo-list">
-      <!-- These are here just to show the structure of the list items -->
-      <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-      <li class="completed">
+    <ul
+      *ngFor="let item of todos"
+      class="todo-list">
+      <li> <!-- class="completed" -->
         <div class="view">
           <input class="toggle" type="checkbox" checked>
-          <label>Taste JavaScript</label>
+          <label>{{item}}</label>
           <button class="destroy"></button>
         </div>
         <input class="edit" value="Create a TodoMVC template">
-      </li>
-      <li>
-        <div class="view">
-          <input class="toggle" type="checkbox">
-          <label>Buy a unicorn</label>
-          <button class="destroy"></button>
-        </div>
-        <input class="edit" value="Rule the web">
       </li>
     </ul>
   </section>
@@ -54,7 +46,9 @@
     <button class="clear-completed">Clear completed</button>
   </footer>
 </section>
-<footer class="info">
+<footer
+  *ngIf="todos.length > 0"
+  class="info">
   <p>Double-click to edit a todo</p>
   <!-- Remove the below line ↓ -->
   <p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
