實作 OnChanges 介面，並實作 ngOnChanges 方法

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,8 @@
 <footer class="footer">
   <!-- This should be `0 items left` by default -->
-  <span class="todo-count"><strong>{{todos.length}}</strong> item left</span>
+  <span
+    [ngStyle]="{color: tooMore ? 'red' : ''}"
+    class="todo-count"><strong>{{todos.length}}</strong> item left</span>
   <!-- Remove this if you don't implement routing -->
   <ul class="filters">
     <li>
