--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,10 @@
     </ul>
   </section>
   <!-- This footer should hidden by default and shown when there are todos -->
-  <app-footer [data]="todos"></app-footer>
+  <app-footer
+    [data]="todos"
+    (clearComplete)="clearComplete()">
+  </app-footer>
 </section>
 <footer
   *ngIf="todos.length > 0"
