--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,5 +16,7 @@
     </li>
   </ul>
   <!-- Hidden if no completed items are left ↓ -->
-  <button class="clear-completed">Clear completed</button>
+  <button
+    (click)="doClear()"
+    class="clear-completed">Clear completed</button>
 </footer>
