套用 @Output() 裝飾器 (Decorator) 作法二

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,6 +17,6 @@
   </ul>
   <!-- Hidden if no completed items are left ↓ -->
   <button
-    (click)="doClear()"
+    (click)="onClearBtnClick.emit()"
     class="clear-completed">Clear completed</button>
 </footer>
