--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
   <!-- This footer should hidden by default and shown when there are todos -->
   <app-footer
     [data]="todos"
-    (clearComplete)="clearComplete()">
+    (onClearBtnClick)="clearComplete()">
   </app-footer>
 </section>
 <footer
