將 FooterComponent 事件傳遞至 AppComponent，並將值傳給設定在 ngFor 的 預計自定 Pipe: filter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
     <input class="toggle-all" type="checkbox">
     <label for="toggle-all">Mark all as complete</label>
     <ul
-      *ngFor="let item of todos"
+      *ngFor="let item of todos | filter: filterType"
       class="todo-list">
       <li [class.completed]="item.done">
         <div class="view">
@@ -30,7 +30,8 @@
   <app-footer
     [data]="todos"
     *ngIf="todos.length > 0"
-    (onClearBtnClick)="clearComplete()">
+    (onClearBtnClick)="clearComplete()"
+    (filterTypeChanged)="filterData($event)">
   </app-footer>
 </section>
 <footer
