實作全選功能

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,11 @@
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
   <section class="main" *ngIf="todos.length > 0">
-    <input class="toggle-all" type="checkbox">
+    <input
+      [(ngModel)]="isToggleAll"
+      (ngModelChange)="toggleAll($event)"
+      class="toggle-all"
+      type="checkbox">
     <label for="toggle-all">Mark all as complete</label>
     <ul
       *ngFor="let item of todos | filter: filterType"
