使用 Http 服務元件呼叫 RESTful APIs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,11 @@
       class="todo-list">
       <li [class.completed]="item.done">
         <div class="view">
-          <input class="toggle" type="checkbox" [(ngModel)]="item.done">
+          <input
+            class="toggle"
+            type="checkbox"
+            [(ngModel)]="item.done"
+            (ngModelChange)="todoUpdate(item)">
           <label [ngStyle]="{'color': item.done ? 'green' : 'red' }">{{item.text | uppercase}}</label>
           <button
             (click)="removeTodo(item)"
